  strsignal instead.

* The deprecated symbols sys_errlist, _sys_errlist, sys_nerr, and _sys_nerr
  are no longer available to newly linked binaries, and their declarations
  have been removed from from <stdio.h>.  They are exported solely as
  compatibility symbols to support old binaries.  All programs should use
  strerror or strerror_r instead.

Changes to build and runtime requirements:

* powerpc64le requires GCC 7.4 or newer.  This is required for supporting
  long double redirects.

Security related changes:

  CVE-2020-10029: Trigonometric functions on x86 targets suffered from stack
  corruption when they were passed a pseudo-zero argument.  Reported by Guido
  Vranken / ForAllSecure Mayhem.

  CVE-2020-1751: A defect in the PowerPC backtrace function could cause an
  out-of-bounds write when executed in a signal frame context.

  CVE-2020-1752: A use-after-free vulnerability in the glob function when
  expanding ~user has been fixed.

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]

Version 2.31

Major new features:

* The GNU C Library now supports a feature test macro _ISOC2X_SOURCE to
  enable features from the draft ISO C2X standard.  Only some features from
  this draft standard are supported by the GNU C Library, and as the draft
  is under active development, the set of features enabled by this macro is
  liable to change.  Features from C2X are also enabled by _GNU_SOURCE, or
  by compiling with "gcc -std=gnu2x".

* The <math.h> functions that round their results to a narrower type now
  have corresponding type-generic macros in <tgmath.h>, as defined in TS
  18661-1:2014 and TS 18661-3:2015 as amended by the resolution of
  Clarification Request 13 to TS 18661-3.

* The function pthread_clockjoin_np has been added, enabling join with a
  terminated thread with a specific clock.  It allows waiting against